# lambdust

./: .gitignore  .lambdust_history  20250711.txt  API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKING.md  BENCHMARKING_README.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  CLIPPY_ERROR.txt  CMakeLists.txt  COMPREHENSIVE_BENCHMARKING_SYSTEM.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_STRATEGY.md  Dockerfile.benchmarks  EFFECT_SYSTEM.md  ENHANCEMENT_PROPOSAL.md  INFINITE_LOOP_DETECTION_DESIGN.md  Makefile  PERFORMANCE.md  PHASE_II_DESIGN.md  R7RS_COMPLIANCE_STATUS.md  README.md  SIMD_ARCHITECTURE.md  SURGICAL_PLAN.md  TEST_OUTPUT.txt  TYPE_SYSTEM.md  analyze-performance.py  benchmark-config.yaml  benchmark.rs  benchmark.sh  cobertura.xml  codecov.yml  comprehensive_benchmark_config.json  coverage.lcov  debug_call_cc.scm  debug_continuations  debug_continuations.rs  (+32 more)
.claude/: setting.json
.claude/agents/: lambdust-r7rs-expert.md
.cursor/rules/: global.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  performance_benchmarks.yml
agda/: README.md  basic.agda  basic.agdai  simple-test.agda  test.agda
agda/Optimizations/: ConstantFolding.agda  TheoremDerivation.agda
agda/R7RS/: Core.agda  CoreSemantics.agda  SimpleSemantics.agda  SimpleSemantics.agdai
benches/: comprehensive_performance_benchmarks.rs  containers.rs  core_operation_benchmarks.rs  core_performance_benchmarks.rs  memory_optimization.rs  migration_impact_benchmarks.rs  optimization_benchmarks.rs  performance_analysis_benchmarks.rs  performance_benchmark.rs  performance_optimization.rs  regression_testing_benchmarks.rs  scheme_operation_benchmarks.rs  system_performance_benchmarks.rs
benchmarks/: latency_benchmarks.rs  memory_usage_benchmarks.rs  parallel_evaluation_benchmarks.rs
cmake/: lambdust-config.cmake.in
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILDING.md  BUILD_COMMANDS.md  CHANGELOG.md  CODE_HYGIENIC_TASK.md  CODE_INDEX.md  CODE_INDEX_GENERATED.md  CONCURRENCY.md  CONTRIBUTING.md  CURRENT_TASKS.md  DEVELOPMENT_FLOW.md  DEVELOPMENT_INDEX_WORKFLOW.md  DOCUMENTATION.md  EFFECT_SYSTEM.md  EVALUATOR_SEPARATION_DESIGN.md.bak  EnvironmentOptimization.md  FUTURE_RESEARCH_DIRECTIONS.md  FormalSemantics.md  HYGIENIC_MACRO_DESIGN.md  INDEX.md  LAMBDUST_ACHIEVEMENT_REPORT.md  OptimizationPlan.md  PERFORMANCE.md  PROJECT_OVERVIEW.md  R7RS_IMPLEMENTATION.md  R7RS_PICO_IMPLEMENTATION.md  README.md  REPL.md  RUST_AST_ANALYSIS_DESIGN.md  RustEditionUpgradeProcedure.md  SRFI-121-Implementation.md  SRFI_IMPLEMENTATION_PLAN.md  TECHNICAL_IMPLEMENTATION_GUIDE.md  TYPE_SYSTEM.md  UNIFIED_ROADMAP.md  io_builtin_functions.md  list_builtin_functions.md
docs/api/: builtins.md
docs/archive/: FEATURE_FLAG_OPTIMIZATION_PLAN.md  HISTORY.md  README.md  (+4 more)
examples/: README_CPP_INTEGRATION.md  adaptive_learning_demo.rs  advanced_formal_verification_demo.rs  advanced_hygienic_transformer_demo.rs  advanced_jit_demonstration.rs  advanced_repl_demo.scm  advanced_symbol_generator_demo.rs  advanced_symbol_renamer_demo.rs  analyze_memory.rs  basic.ldust  benchmark.rs  bridge_example.rs  character_literal_verification.rs  complete_formal_verification_demo.rs  control_flow_demo.rs  cow_environment_demo.rs  custom_predicates_demo.rs  enhanced_repl_demo.rs  error_handling_demo.rs  error_reporting_demo.rs  execution_context_demo.rs  execution_context_performance_demo.rs  formal_verification_demo.rs  ghc_benchmark_demo.rs  hygienic_macro_demo.rs  hygienic_when_macro.rs  incremental_inference_demo.rs  library_system_demo.rs  macro_expand_builtin_test.rs  macro_expand_demo.rs  mdo_syntax_demo.rs  monad_transformer_demo.rs  new_architecture_demo.rs  performance_cow_demo.rs  performance_demo.rs  performance_final_demo.rs  performance_report_demo.rs  performance_showcase.rs  performance_simple_test.rs  performance_with_builtins_demo.rs  (+13 more)
examples/c_integration/: CMakeLists.txt  basic_usage.c  calculator.c  config_example.c  host_functions.c  plugin_system.c
examples/cpp_integration/: CMakeLists.txt  cpp_enhanced_safety.cpp  cpp_modern_features.cpp  cpp_template_integration.cpp  cpp_wrapper.cpp
include/: lambdust.h  lambdust_enhanced.h
scripts/: generate_report.py  generate_tests.py  performance_monitor.py  performance_monitoring.sh  process_results.py  release.sh  setup-libffi-macos.sh
src/: adaptive_memory.rs  ast.rs  bridge.rs  bridge_tests.rs  builtins.rs  builtins_old.rs  cps_inlining.rs  embedded_evaluator.rs  environment.rs  error.rs  error_tests.rs  evaluator.rs  evaluator_old.rs  ffi.rs  ffi_enhanced.rs  formal_evaluator.rs  formal_verification.rs  host.rs  interpreter.rs  lexer.rs  lib.rs  macros.rs  main.rs  marshal.rs  memory_pool.rs  module_system.rs  optimized_collections.rs  parser.rs  stack_monitor.rs  testing_support.rs  value.rs  wasm.rs
tests/: README.md  advanced_concurrency_tests.rs  advanced_effect_system_tests.rs  advanced_integration_tests.rs  advanced_language_feature_tests.rs  advanced_r7rs_large_tests.rs  advanced_type_system_tests.rs  advanced_type_system_tests_fixed.rs  basic_formal_verification_test.rs  basic_test.ldust  begin_define_test.rs  chibi_integration_comprehensive_suite.rs  chibi_r7rs_comprehensive_compliance_suite.rs  church_rosser_integration_tests.rs  comprehensive_r7rs_test_runner.rs  container_integration_test.rs  core_functionality_test.rs  do_debug_test.rs  evaluator_tests.rs  ffi_comprehensive_tests.rs  ffi_tests.rs  formal_verification_basic_test.rs  gc_r7rs_compliance_verification.rs  infinite_loop_detection_test.rs  integration_tests.rs  lambda_arithmetic_test.rs  lazy_vector_safety_test.rs  lib.rs  manual_do_test.rs  mod.rs  module_system_tests.rs  multithreaded_integration_tests.rs  performance_tests.rs  r7rs_compliance_report.rs  r7rs_compliance_tests.rs  r7rs_comprehensive_compliance_suite.rs  r7rs_final_compliance_suite.rs  r7rs_final_comprehensive_suite.rs  r7rs_simple_compliance_suite.rs  r7rs_small_compliance.rs  (+21 more)
tools/: index_generator.py
wasm/: demo.html  lambdust.d.ts  lambdust.js  package.json
(+1100 files in other folders)
