[package]
name = "lambdust"
version = "0.3.0"
edition = "2021"
description = "Production-ready R7RS Scheme interpreter with advanced optimizations, SRFI support, and formal verification"
authors = ["Mitsuki Akasaka <m.akasaka@miraina-step.co.jp>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/akasaka-miraina/lambdust"
homepage = "https://github.com/akasaka-miraina/lambdust"
documentation = "https://docs.rs/lambdust"
readme = "README.md"
keywords = ["scheme", "lisp", "interpreter", "r7rs", "srfi"]
categories = ["compilers", "embedded", "development-tools"]
exclude = [
    "debug_*",
    "test_*",
    "*.scm",
    "target/",
    "agda/",
    "formal_verification_strategy.md",
    "refactor_evaluator.md",
    "review.md",
    "language_implementation_insights.md",
    "DEPLOYMENT_STRATEGY.md",
    "PHASE_II_DESIGN.md",
    "SURGICAL_PLAN.md"
]

[dependencies]
# Core dependencies for the interpreter (optimized for 2024 edition)
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Removed: num-bigint, num-rational, num-complex, num-traits
# Rationale: SchemeNumber already uses basic i64/f64 types directly
# Impact: -4 dependencies, ~30% faster compile times for numeric operations

# Removed: anyhow - consolidating on thiserror for structured errors
# Rationale: Both serve similar purposes, thiserror provides better structure
# Impact: -1 dependency, better error ergonomics

# Parsing and lexing (made optional for embedded targets)
nom = { version = "7.1", optional = true }

# String interning (optimized, made optional)
string-interner = { version = "0.17", default-features = false, optional = true }

# Collections (made optional)
indexmap = { version = "2.2", optional = true }
smallvec = { version = "1.13", optional = true }
rustc-hash = "2.0"  # Fast hash maps for performance-critical paths

# FFI safety (made optional)
libc = { version = "0.2", optional = true }

# For WebAssembly support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
wasi = { version = "0.13", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

# For REPL functionality
rustyline = { version = "15.0", optional = true }
clap = { version = "4.5", optional = true }

[dev-dependencies]
criterion = "0.5"
mockall = "0.13"

# ===== Build Optimization Profiles =====

[profile.release]
lto = true                    # Link Time Optimization
codegen-units = 1            # Reduce parallelism for smaller binaries
panic = "abort"              # Disable stack unwinding
strip = true                 # Strip debug information
opt-level = 3                # Maximum optimization

# Minimal binary size profile
[profile.min-size]
inherits = "release"
opt-level = "z"              # Optimize for size
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Development profile with debug info
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

# Fast development builds
[profile.dev-fast]
inherits = "dev"
opt-level = 1
debug = 1
lto = false

[[bench]]
name = "performance_benchmark"
harness = false

[[bench]]
name = "performance_optimization"
harness = false

[[bench]]
name = "memory_optimization"
harness = false

[lib]
name = "lambdust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lambdust"
path = "src/bin/repl.rs"
required-features = ["repl"]

[features]
default = ["standard"]

# ===== Core Feature Layers =====

# R7RS-pico configuration (< 200KB binary) - ultra-minimal Scheme with U->E semantics
pico = []

# Embedded configuration (< 500KB binary) - core functionality only  
embedded = ["pico"]

# Minimal configuration (< 3MB binary) - reduced from 5MB
minimal = [
    "std",
    "dep:nom",
    "dep:string-interner"
]

# Standard configuration (< 10MB binary) - reduced from 15MB  
standard = [
    "minimal",
    "dep:indexmap",
    "dep:smallvec",
    "srfi-support",
    "basic-optimization",
    "memory-pooling",
    "debug-tracing",
    "runtime-verification",
    "type-system"
]

# Verified configuration (< 50MB binary)
verified = [
    "standard",
    "agda-integration",
    "theorem-derivation",
    "runtime-verification"
]

# Development configuration (< 100MB binary)
development = [
    "verified",
    "debug-tracing",
    "performance-profiling",
    "repl-support",
    "language-server"
]

# ===== Individual Feature Flags =====

# Core features
std = []
no-std = []

# SRFI support
srfi-support = []

# Optimization layers
basic-optimization = []
agda-integration = []
theorem-derivation = []
runtime-verification = []
# Type System (Polynomial Universe & Dependent Types)
type-system = []
parallel-type-checking = []

# Memory management
memory-pooling = []
raii-store = []

# Development tools
debug-tracing = []
performance-profiling = []
repl-support = ["dep:rustyline", "dep:clap"]
language-server = []

# Legacy compatibility
repl = ["repl-support"]
debugger = ["debug-tracing"]
profiler = ["performance-profiling"]

# Platform targets
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys", "dep:getrandom"]
wasi = ["dep:wasi"]
